# rakers

./: Cargo.toml  LICENSE  README.md  TODO.org  justfile
.githooks/: pre-push
.github/workflows/: ci.yml  dynamic-fetch.yml
scripts/: bump_version.sh  run_dynamic_fetch_test.sh  smoke_test_release.sh  todomvc_compat.sh
src/: bootstrap.js  diff.rs  dom.rs  lib.rs  main.rs  pretty.rs  runtime.rs  select.rs
tests/: cli.rs  fixtures.rs  integration.rs
tests/fixtures/: document_write.html  dom_api.html  dynamic_fetch_live.html  dynamic_fetch_live_server.js  dynamic_fetch_stubbed.html  inner_html.html  settimeout.html
