[package]
name = "rakers"
version = "0.1.0"
edition = "2024"
description = "Lightweight headless JS renderer — executes JavaScript and returns the rendered HTML"
license = "MIT"
repository = "https://github.com/tbro/rakers"
homepage = "https://github.com/tbro/rakers"
documentation = "https://docs.rs/rakers"
readme = "README.md"
keywords = ["javascript", "headless", "renderer", "scraping", "html"]
categories = ["web-programming", "command-line-utilities"]
authors = ["tbro <tim@toma.tl>"]
exclude = ["TODO.org", "scripts/", ".claude/"]

[features]
default = ["rquickjs"]
boa = ["dep:boa_engine"]
rquickjs = ["dep:rquickjs"]

[dependencies]
anyhow = "1"
scraper = "0.27"
similar = "2"
ureq = { version = "2", features = ["socks-proxy"] }
url = "2"
clap = { version = "4", features = ["derive"] }
html5ever = "0.27"
markup5ever_rcdom = "0.3"
boa_engine = { version = "0.19", optional = true }
rquickjs = { version = "0.8", features = ["full"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
